# spinchain

./: CMakeLists.txt  README.md  build.sh
app/: CMakeLists.txt  main.cpp
docs/: Doxyfile
docs/html/: TwoLevelSys_8hpp_source.html  annotated.html  classTwoLevel_1_1TwoLevelSys-members.html  classTwoLevel_1_1TwoLevelSys.html  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d422163b96683743ed3963d4aac17747.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_func.html  index.html
docs/html/search/: all_0.js  all_1.js  all_2.js  searchdata.js
docs/latex/: TwoLevelSys_8hpp_source.tex  annotated.tex  classTwoLevel_1_1TwoLevelSys.tex  files.tex  refman.tex
include/: SpinHalf.hpp  SpinHalfChain.hpp
src/: CMakeLists.txt  SpinHalf.cpp  SpinHalfChain.cpp
tests/: CMakeLists.txt  shc_len2_x_only.cpp  shc_len2_xhamiltonian.cpp  shc_len2_y_only.cpp  shc_len2_yhamiltonian.cpp  shc_len2_z_only.cpp  shc_len2_zhamiltonian.cpp  sx_4mer_hmltn.cpp  sx_dimer_gs.cpp  sy_4mer_hmltn.cpp  sy_dimer_gs.cpp  sz_4mer_hmltn.cpp  sz_dimer_gs.cpp
